--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "astro-blog",
+  "name": "techblog",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "start": "astro dev",
+    "build": "astro check && astro build --remote",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "seed": "astro seed"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.3",
-    "@astrojs/rss": "^4.0.10",
-    "@astrojs/sitemap": "^3.2.1",
-    "astro": "^5.1.1"
+    "@astrojs/check": "^0.3.2",
+    "@astrojs/db": "^0.14.5",
+    "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/vercel": "^6.1.0",
+    "@libsql/client": "^0.14.0",
+    "astro": "^5.1.2",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   }
 }
