--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
     "seed": "astro seed"
@@ -18,6 +18,7 @@
     "@libsql/client": "^0.14.0",
     "astro": "^5.1.2",
     "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vercel": "^39.2.5"
   }
 }
