--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "techblog",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro",
-    "seed": "astro seed"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.3.2",
-    "@astrojs/db": "^0.14.5",
-    "@astrojs/tailwind": "^5.0.3",
-    "@astrojs/vercel": "^6.1.0",
-    "@libsql/client": "^0.14.0",
-    "astro": "^5.1.2",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3",
-    "vercel": "^39.2.5"
-  }
+    "name": "techblog",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "seed": "astro seed"
+    },
+    "dependencies": {
+        "@astrojs/netlify": "^3.1.1",
+        "@astrojs/rss": "^4.0.1",
+        "@astrojs/check": "^0.3.2",
+        "@astrojs/db": "^0.14.5",
+        "@astrojs/tailwind": "^5.0.3",
+        "@astrojs/vercel": "^6.1.0",
+        "@libsql/client": "^0.14.0",
+        "markdown-it": "^13.0.1",
+        "astro": "^5.1.2",
+        "tailwindcss": "^3.3.6",
+        "typescript": "^5.3.3",
+        "vercel": "^39.2.5"
+    },
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/markdown-it": "^12.2.3",
+        "@types/sanitize-html": "^2.9.0"
+    }
 }
